# tools-make

./: .cvsignore  .gitignore  ANNOUNCE  CODEOWNERS  ChangeLog  DESIGN  FAQ  GNUmakefile.in  GNUstep-HOWTO  GNUstep-reset.sh  GNUstep-reset.sh.in  GNUstep-strict-v2.conf.in  GNUstep.conf  GNUstep.conf.in  GNUstep.csh.in  GNUstep.sh.in  GNUsteprc  INSTALL  Makefile.in  Makefile.preamble  MediaBook.func  MediaBook.sh  NEWS  README  README.Packaging  README.md  RELEASENOTES  SavePanel.gmodel  Version  aclocal.m4  aggregate.make  appimage.make  application.make  apprun.template  bake_debian_files.sh  brain.make  bundle.make  clean.make  clean_cpu.sh  clean_os.sh  (+99 more)
Documentation/: .cvsignore  DESIGN  GNUmakefile  GNUmakefile.in  GNUstep.7  README.Cygwin  README.Darwin  README.MinGW  README.MinGWOnCygwin  README.NetBSD  README.Packaging  README.cygwin  announce.texi  debugapp.1  faq.texi  filesystem.texi  gnustep-config.1  gnustep-faq.texi  gnustep-filesystem.texi  gnustep-howto.texi  gnustep-machines.texi  gnustep-make.texi  gnustep-userfaq.texi  gnustep.init  install.texi  internals.tex  library-combo.7  machines.texi  make.texi  makedoc.make  makerules.make  news.texi  openapp.1  opentool.1  readme.texi  releasenotes.texi  userfaq.texi
FilesystemLayouts/: README  debian  fhs  fhs-system  gershwin  gnustep  gnustep-with-network  mac  mingw  next  standalone  windows
Instance/: application.make  bundle.make  clibrary.make  ctool.make  documentation.make  framework.make  gswapp.make  gswbundle.make  java-tool.make  java.make  library.make  objc.make  palette.make  resource-set.make  rules.make  service.make  subproject.make  test-application.make  test-library.make  test-tool.make  tool.make
Instance/Documentation/: autogsdoc.make  gsdoc.make  install_files.make  javadoc.make  latex.make  texi.make
Instance/Shared/: bundle.make  headers.make  java.make  stamp-string.make  strings.make
Master/: README  aggregate.make  appimage.make  application.make  bundle.make  clibrary.make  ctool.make  deb.make  documentation.make  framework.make  gswapp.make  gswbundle.make  java-tool.make  java.make  library.make  nsis.make  objc.make  palette.make  parallel-subdirectories.make  resource-set.make  rpm.make  rules.make  serial-subdirectories.make  service.make  source-distribution.make  subproject.make  test-application.make  test-library.make  test-tool.make  tool.make
TestFramework/: End.sh  GNUmakefile.in  ObjectTesting.h  README  Start.sh  Summary.sh  TestInfo  Testing.h  example1.m  example2.m  example3.m  example4.m  example5.m  example6.m  example7.m  example8.m  example9.m  gnustep-tests  gnustep-tests.in  runtest.sh
TestFramework/py/: gstest_to_junit_xml.py
config-precomp-test/: gs_precomp_test.m  run-test.sh
debian/: changelog  control  copyright  rules
m4/: gs_blocks_support.m4  gs_cc_is_clang.m4  gs_check_abi20_linker.m4  gs_gcc_version.m4  gs_library_combo.m4  gs_objc_runtime.m4  gs_runtime_abi.m4
trunk/: ChangeLog  FAQ  GNUmakefile.in  GNUstep-HOWTO  GNUstep.csh.in  GNUstep.sh.in  INSTALL  NEWS  RELEASENOTES  config.make.in  config.site  debugapp  executable.template.in  filesystem.csh.in  filesystem.make.in  gnustep-config.in  ld_lib_path.sh  messages.make  openapp.in  print_unique_pathlist.sh  relative_path.sh  rules.make  which_lib.c
trunk/Documentation/: README.Darwin  install.texi  make.texi  releasenotes.texi
trunk/FilesystemLayouts/: README  fhs  mac
trunk/Instance/: application.make  bundle.make  ctool.make  gswbundle.make  java-tool.make  library.make  objc.make  subproject.make
trunk/Instance/Documentation/: install_files.make  javadoc.make  latex.make
trunk/Master/: application.make  ctool.make  library.make  rpm.make  service.make  subproject.make  test-library.make  test-tool.make  tool.make
